deploy: 17e23703e39963e73204ccd4798c175c64721aaf

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -94,6 +94,7 @@
 <li><a href="yearn_treasury/rules/ignore/swaps/vaults.html">yearn_treasury.rules.ignore.swaps.vaults</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/yfi.html">yearn_treasury.rules.ignore.swaps.yfi</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/yla.html">yearn_treasury.rules.ignore.swaps.yla</a></li>
+<li><a href="yearn_treasury/rules/ignore/unit.html">yearn_treasury.rules.ignore.unit</a></li>
 <li><a href="yearn_treasury/rules/ignore/weth.html">yearn_treasury.rules.ignore.weth</a></li>
 <li><a href="yearn_treasury/rules/ignore/ygov.html">yearn_treasury.rules.ignore.ygov</a></li>
 <li><a href="yearn_treasury/rules/other_expense/boost.html">yearn_treasury.rules.other_expense.boost</a></li>
