--- a/genindex.html
+++ b/genindex.html
@@ -194,6 +194,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_bug_bounty">is_bug_bounty() (in module yearn_treasury.rules.expense.security)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.unit.is_burning_usdp">is_burning_usdp() (in module yearn_treasury.rules.ignore.unit)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.yfi.is_buyer_top_up">is_buyer_top_up() (in module yearn_treasury.rules.ignore.swaps.yfi)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.boost.is_buying_crv_for_boost">is_buying_crv_for_boost() (in module yearn_treasury.rules.other_expense.boost)</a>
@@ -268,6 +270,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.bugs.is_lossy_fee_reimbursement">is_lossy_fee_reimbursement() (in module yearn_treasury.rules.other_expense.bugs)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.unit.is_minting_usdp">is_minting_usdp() (in module yearn_treasury.rules.ignore.unit)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_mixbytes_audit">is_mixbytes_audit() (in module yearn_treasury.rules.expense.security)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_other_audit">is_other_audit() (in module yearn_treasury.rules.expense.security)</a>
@@ -327,6 +331,10 @@
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.uniswap.is_uniswap_swap">is_uniswap_swap() (in module yearn_treasury.rules.ignore.swaps.uniswap)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.uniswap.is_uniswap_withdrawal">is_uniswap_withdrawal() (in module yearn_treasury.rules.ignore.swaps.uniswap)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.unit.is_unit_yfi_deposit">is_unit_yfi_deposit() (in module yearn_treasury.rules.ignore.unit)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.unit.is_unit_yfi_withdrawal">is_unit_yfi_withdrawal() (in module yearn_treasury.rules.ignore.unit)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.unwrapper.is_unwrapper">is_unwrapper() (in module yearn_treasury.rules.ignore.swaps.unwrapper)</a>
 </li>
@@ -473,6 +481,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.yfi">yearn_treasury.rules.ignore.swaps.yfi</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.yla">yearn_treasury.rules.ignore.swaps.yla</a>
+</li>
+        <li><a href="source/yearn_treasury.rules.ignore.html#module-yearn_treasury.rules.ignore.unit">yearn_treasury.rules.ignore.unit</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.html#module-yearn_treasury.rules.ignore.weth">yearn_treasury.rules.ignore.weth</a>
 </li>
@@ -804,6 +814,13 @@
 
       <ul>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.yla">module</a>
+</li>
+      </ul></li>
+      <li>
+    yearn_treasury.rules.ignore.unit
+
+      <ul>
+        <li><a href="source/yearn_treasury.rules.ignore.html#module-yearn_treasury.rules.ignore.unit">module</a>
 </li>
       </ul></li>
       <li>
