--- a/_modules/yearn_treasury/rules/other_expense/misc.html
+++ b/_modules/yearn_treasury/rules/other_expense/misc.html
@@ -101,6 +101,23 @@
         <span class="p">)</span>
     <span class="p">)</span></div>
 
+
+
+<div class="viewcode-block" id="is_one_yfi_for_signers">
+<a class="viewcode-back" href="../../../../source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.misc.is_one_yfi_for_signers">[docs]</a>
+<span class="nd">@other_expense</span><span class="p">(</span><span class="s2">&quot;1 YFI for Signers&quot;</span><span class="p">,</span> <span class="n">Network</span><span class="o">.</span><span class="n">Mainnet</span><span class="p">)</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">is_one_yfi_for_signers</span><span class="p">(</span><span class="n">tx</span><span class="p">:</span> <span class="n">TreasuryTx</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
+    <span class="n">txhash</span> <span class="o">=</span> <span class="n">tx</span><span class="o">.</span><span class="n">hash</span>
+    <span class="k">return</span> <span class="n">txhash</span> <span class="ow">in</span> <span class="p">(</span>
+        <span class="s2">&quot;0x86700207761cdca82a0ad4e04b49b749913de63c8bd933b4f3f9a145d9b2c1fa&quot;</span><span class="p">,</span>
+        <span class="c1"># https://snapshot.box/#/s:veyfi.eth/proposal/0xc7ded2863a10154b6b520921af4ada48d64d74e5b7989f98cdf073542b2e4411</span>
+        <span class="s2">&quot;0x5ed4ce821cb09b4c6929cc9a6b5e0a23515f9bb97d9b5916819a6986f6c89f09&quot;</span><span class="p">,</span>
+        <span class="s2">&quot;0xe80628d90254f8da0a6016629c8811b5dd54f231e94f71697ab37d8c00482586&quot;</span><span class="p">,</span>
+    <span class="p">)</span> <span class="ow">or</span> <span class="p">(</span>
+        <span class="n">txhash</span> <span class="o">==</span> <span class="s2">&quot;0x831ad751e1be1dbb82cb9e1f5bf0e38e31327b8c58f6ad6b90bcfb396129bb11&quot;</span>
+        <span class="ow">and</span> <span class="n">tx</span><span class="o">.</span><span class="n">log_index</span> <span class="o">==</span> <span class="mi">403</span>
+    <span class="p">)</span></div>
+
 </pre></div>
 
            </div>
