--- a/genindex.html
+++ b/genindex.html
@@ -274,6 +274,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_mixbytes_audit">is_mixbytes_audit() (in module yearn_treasury.rules.expense.security)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.other_expense.html#yearn_treasury.rules.other_expense.misc.is_one_yfi_for_signers">is_one_yfi_for_signers() (in module yearn_treasury.rules.other_expense.misc)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_other_audit">is_other_audit() (in module yearn_treasury.rules.expense.security)</a>
 </li>
       <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.is_paid">is_paid() (yearn_treasury.budget.BudgetRequest method)</a>
