deploy: d087996014646ec0bd09bfe604974550281ebe96

--- a/genindex.html
+++ b/genindex.html
@@ -104,12 +104,14 @@
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults._get_rewards">_get_rewards() (in module yearn_treasury.rules.revenue.vaults)</a>
 </li>
-      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._is_curve_withdrawal_multi">_is_curve_withdrawal_multi() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.vaults._get_underlying">_get_underlying() (in module yearn_treasury.rules.ignore.swaps.vaults)</a>
 </li>
-      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._is_curve_withdrawal_one">_is_curve_withdrawal_one() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._is_curve_withdrawal_multi">_is_curve_withdrawal_multi() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._is_curve_withdrawal_one">_is_curve_withdrawal_one() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.farming._is_generic_comp_rewards">_is_generic_comp_rewards() (in module yearn_treasury.rules.revenue.farming)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve._is_new_style">_is_new_style() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
@@ -357,6 +359,8 @@
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.vaults.is_v3_vault_fees">is_v3_vault_fees() (in module yearn_treasury.rules.revenue.vaults)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.vaults.is_vault_deposit">is_vault_deposit() (in module yearn_treasury.rules.ignore.swaps.vaults)</a>
+</li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.vaults.is_vault_withdrawal">is_vault_withdrawal() (in module yearn_treasury.rules.ignore.swaps.vaults)</a>
 </li>
       <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.is_vesting">is_vesting() (yearn_treasury.budget.BudgetRequest method)</a>
 </li>
