deploy: 8dcfae0dd512fdf46c5abc5ca8b73c7954f38335

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -70,7 +70,14 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="yearn_treasury/rules/ignore/general.html">yearn_treasury.rules.ignore.general</a></li>
+<ul><li><a href="yearn_treasury/budget/_request.html">yearn_treasury.budget._request</a></li>
+<li><a href="yearn_treasury/constants.html">yearn_treasury.constants</a></li>
+<li><a href="yearn_treasury/rules/cost_of_revenue/gas.html">yearn_treasury.rules.cost_of_revenue.gas</a></li>
+<li><a href="yearn_treasury/rules/expense/general.html">yearn_treasury.rules.expense.general</a></li>
+<li><a href="yearn_treasury/rules/expense/infrastructure.html">yearn_treasury.rules.expense.infrastructure</a></li>
+<li><a href="yearn_treasury/rules/expense/people.html">yearn_treasury.rules.expense.people</a></li>
+<li><a href="yearn_treasury/rules/expense/security.html">yearn_treasury.rules.expense.security</a></li>
+<li><a href="yearn_treasury/rules/ignore/general.html">yearn_treasury.rules.ignore.general</a></li>
 <li><a href="yearn_treasury/rules/ignore/maker.html">yearn_treasury.rules.ignore.maker</a></li>
 <li><a href="yearn_treasury/rules/ignore/passthru.html">yearn_treasury.rules.ignore.passthru</a></li>
 <li><a href="yearn_treasury/rules/ignore/staking.html">yearn_treasury.rules.ignore.staking</a></li>
