deploy: b7f421280a87aaae23184472fb5688d102c137fc

--- a/_modules/yearn_treasury/constants.html
+++ b/_modules/yearn_treasury/constants.html
@@ -132,6 +132,16 @@
 <span class="p">}</span>
 
 
+<span class="n">YFI</span><span class="p">:</span> <span class="n">Final</span> <span class="o">=</span> <span class="p">{</span>
+    <span class="n">Network</span><span class="o">.</span><span class="n">Mainnet</span><span class="p">:</span> <span class="s2">&quot;0x0bc529c00C6401aEF6D220BE8C6Ea1667F6Ad93e&quot;</span><span class="p">,</span>
+    <span class="n">Network</span><span class="o">.</span><span class="n">Fantom</span><span class="p">:</span> <span class="s2">&quot;0x29b0Da86e484E1C0029B56e817912d778aC0EC69&quot;</span><span class="p">,</span>
+    <span class="n">Network</span><span class="o">.</span><span class="n">Arbitrum</span><span class="p">:</span> <span class="s2">&quot;0x82e3A8F066a6989666b031d916c43672085b1582&quot;</span><span class="p">,</span>
+    <span class="n">Network</span><span class="o">.</span><span class="n">Polygon</span><span class="p">:</span> <span class="s2">&quot;0xDA537104D6A5edd53c6fBba9A898708E465260b6&quot;</span><span class="p">,</span>
+<span class="p">}</span><span class="o">.</span><span class="n">get</span><span class="p">(</span>
+    <span class="n">CHAINID</span><span class="p">,</span> <span class="kc">None</span>
+<span class="p">)</span>  <span class="c1"># type: ignore [call-overload]</span>
+
+
 <div class="viewcode-block" id="Args">
 <a class="viewcode-back" href="../../source/yearn_treasury.html#yearn_treasury.constants.Args">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">Args</span><span class="p">:</span>
