--- a/genindex.html
+++ b/genindex.html
@@ -374,6 +374,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.weth.is_weth_mint">is_weth_mint() (in module yearn_treasury.rules.ignore.weth)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.woofy.is_woofy">is_woofy() (in module yearn_treasury.rules.ignore.swaps.woofy)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.expense.html#yearn_treasury.rules.expense.security.is_yacademy_audit">is_yacademy_audit() (in module yearn_treasury.rules.expense.security)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.bribes.is_ybribe_fees">is_ybribe_fees() (in module yearn_treasury.rules.revenue.bribes)</a>
@@ -485,6 +487,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.unwrapper">yearn_treasury.rules.ignore.swaps.unwrapper</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.vaults">yearn_treasury.rules.ignore.swaps.vaults</a>
+</li>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.woofy">yearn_treasury.rules.ignore.swaps.woofy</a>
 </li>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.yfi">yearn_treasury.rules.ignore.swaps.yfi</a>
 </li>
@@ -787,8 +791,6 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.synthetix">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     yearn_treasury.rules.ignore.swaps.uniswap
 
@@ -796,6 +798,8 @@
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.uniswap">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     yearn_treasury.rules.ignore.swaps.unwrapper
 
@@ -808,6 +812,13 @@
 
       <ul>
         <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.vaults">module</a>
+</li>
+      </ul></li>
+      <li>
+    yearn_treasury.rules.ignore.swaps.woofy
+
+      <ul>
+        <li><a href="source/yearn_treasury.rules.ignore.swaps.html#module-yearn_treasury.rules.ignore.swaps.woofy">module</a>
 </li>
       </ul></li>
       <li>
