--- a/_modules/index.html
+++ b/_modules/index.html
@@ -92,6 +92,7 @@
 <li><a href="yearn_treasury/rules/ignore/swaps/uniswap.html">yearn_treasury.rules.ignore.swaps.uniswap</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/unwrapper.html">yearn_treasury.rules.ignore.swaps.unwrapper</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/vaults.html">yearn_treasury.rules.ignore.swaps.vaults</a></li>
+<li><a href="yearn_treasury/rules/ignore/swaps/woofy.html">yearn_treasury.rules.ignore.swaps.woofy</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/yfi.html">yearn_treasury.rules.ignore.swaps.yfi</a></li>
 <li><a href="yearn_treasury/rules/ignore/swaps/yla.html">yearn_treasury.rules.ignore.swaps.yla</a></li>
 <li><a href="yearn_treasury/rules/ignore/unit.html">yearn_treasury.rules.ignore.unit</a></li>
