--- a/genindex.html
+++ b/genindex.html
@@ -218,6 +218,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.revenue.html#yearn_treasury.rules.revenue.seasolver.is_cowswap_incentive">is_cowswap_incentive() (in module yearn_treasury.rules.revenue.seasolver)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_cowswap_migration">is_cowswap_migration() (in module yearn_treasury.rules.ignore.passthru)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.cowswap.is_cowswap_swap">is_cowswap_swap() (in module yearn_treasury.rules.ignore.swaps.cowswap)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve.is_curve_deposit">is_curve_deposit() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
