--- a/genindex.html
+++ b/genindex.html
@@ -222,6 +222,8 @@
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.cowswap.is_cowswap_swap">is_cowswap_swap() (in module yearn_treasury.rules.ignore.swaps.cowswap)</a>
 </li>
+      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_curve_bribe">is_curve_bribe() (in module yearn_treasury.rules.ignore.passthru)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.ignore.swaps.html#yearn_treasury.rules.ignore.swaps.curve.is_curve_deposit">is_curve_deposit() (in module yearn_treasury.rules.ignore.swaps.curve)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.staking.is_curve_gauge">is_curve_gauge() (in module yearn_treasury.rules.ignore.staking)</a>
@@ -292,10 +294,10 @@
 </li>
       <li><a href="source/yearn_treasury.budget.html#yearn_treasury.budget.BudgetRequest.is_rejected">is_rejected() (yearn_treasury.budget.BudgetRequest method)</a>
 </li>
-      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.general.is_returned_fundus">is_returned_fundus() (in module yearn_treasury.rules.ignore.general)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.general.is_returned_fundus">is_returned_fundus() (in module yearn_treasury.rules.ignore.general)</a>
+</li>
       <li><a href="source/yearn_treasury.rules.ignore.html#yearn_treasury.rules.ignore.passthru.is_rkp3r">is_rkp3r() (in module yearn_treasury.rules.ignore.passthru)</a>
 </li>
       <li><a href="source/yearn_treasury.rules.other_income.html#yearn_treasury.rules.other_income.is_robovault_share">is_robovault_share() (in module yearn_treasury.rules.other_income)</a>
